<resources>
    <string name="app_name">Home Security</string>
    <string name="notification_channel_name">Security Alerts</string>
    <string name="notification_channel_description">Notifications for home security events</string>
    <string name="service_notification_title">Security Monitor</string>
    <string name="service_notification_text">Monitoring your home security system</string>
    <string name="alarm_triggered_title">🚨 SECURITY ALARM!</string>
    <string name="connection_status_connected">🟢 Connected to MQTT Broker</string>
    <string name="connection_status_disconnected">🔴 Disconnected</string>
    <string name="connection_details_connected">Monitoring security system via MQTT...</string>
    <string name="connection_details_disconnected">Attempting to reconnect to MQTT...</string>
    <string name="connection_details_starting">Starting MQTT service...</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="test_notification">Test Notification</string>
    <string name="home_security_monitor">Home Security Monitor</string>
    <string name="app_description">This app monitors your home security system and sends push notifications when alarms are triggered.</string>
    <string name="notification_permission_required">Notification permission is required for security alerts</string>
    <string name="test_notification_sent">Test notification sent</string>
    <string name="reset_alarm">Send RESET command</string>
    <string name="arm_alarm">Send ARM command</string>
    <string name="disarm_alarm">Send DISARM command</string>
    <string name="status_alarm">Send STATUS command</string>
</resources>